# pythonprac

./: urls_creator.py
20220913/1/: URLS
20220913/2/: URLS  prog.py
20220920/1/: URLS  prog.py
20220920/2/: URLS  prog.py
20220920/3/: URLS  prog.py
20220927/1/: URLS  prog.py
20220927/2/: URLS  prog.py
20220927/3/: URLS  prog.py
20221004/1/: URLS  prog.py
20221004/2/: URLS  prog.py
20221004/3/: URLS  prog.py
20221004/4/: URLS  prog.py
20221011/1/: URLS  prog.py
20221011/2/: URLS  prog.py
20221011/3/: URLS  prog.py
20221018/1/: URLS  prog.py
20221018/2/: URLS  prog.py
20221018/3/: URLS  prog.py
20221025/1/: URLS  prog.py
20221025/2/: URLS  prog.py
20221025/3/: URLS  prog.py
20221101/1/: URLS  prog.py
20221101/2/: URLS  prog.py
20221101/3/: URLS  prog.py
20221108/1/: URLS  prog.py
20221108/2/: URLS  prog.py
20221108/3/: URLS  prog.py
20221115/1/: URLS  prog.py
20221115/2/: URLS  prog.py
20221115/3/: URLS  prog.py
20221122/1/: URLS  prog.py
20221122/2/: URLS  prog.py
20221122/3/: URLS  prog.py
20221129/1/: URLS  prog.py
20221129/2/: URLS  prog.py
20221206/: upr.py
20221213/: upr.py  upr2.py
20230213/1/: prog.py
20230220/1/: input  prog.py
20230227/1/: prog.py
20230306/1/: prog.py
20230313/0/: client.py  server.py
20230313/1/: message_specification  prog.py  server.py
20230320/1/: client.py  server.py  (+1 more)
20230515/1/moodclient/: pyproject.toml
20230515/1/moodclient/MOODClient.egg-info/: PKG-INFO  SOURCES.txt
20230515/1/moodclient/moodclient/: addmon.py  attack.py  monster_options.py  move.py
(+175 files in other folders)
